Update CSS variables

--- a/resources/scss/app/_bootstrap.scss
+++ b/resources/scss/app/_bootstrap.scss
@@ -13,10 +13,9 @@
 @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
 @import "~bootstrap/scss/type";
-@import "~bootstrap/scss/images";
 @import "~bootstrap/scss/containers";
 @import "~bootstrap/scss/grid";
-@import "~bootstrap/scss/tables";
+//@import "~bootstrap/scss/tables";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
 @import "~bootstrap/scss/transitions";
@@ -29,10 +28,10 @@
 //@import "~bootstrap/scss/breadcrumb";
 //@import "~bootstrap/scss/pagination";
 //@import "~bootstrap/scss/badge";
-@import "~bootstrap/scss/alert";
+//@import "~bootstrap/scss/alert";
 //@import "~bootstrap/scss/progress";
 @import "~bootstrap/scss/list-group";
-@import "~bootstrap/scss/close";
+//@import "~bootstrap/scss/close";
 //@import "~bootstrap/scss/toasts";
 //@import "~bootstrap/scss/modal";
 //@import "~bootstrap/scss/tooltip";
@@ -41,6 +40,9 @@
 //@import "~bootstrap/scss/spinners";
 //@import "~bootstrap/scss/offcanvas";
 //@import "~bootstrap/scss/placeholders";
+//@import "~bootstrap/scss/images";
+/* Only use the img-fluid class */
+.img-fluid {  @include img-fluid(); }
 
 // Helpers
 @import "~bootstrap/scss/helpers";
