--- a/resources/scss/app/_variables.scss
+++ b/resources/scss/app/_variables.scss
@@ -2,58 +2,98 @@
 $prefix:                      dc-;
 
 // Options
-//$enable-caret:                true !default;
-//$enable-rounded:              true !default;
-//$enable-shadows:              false !default;
-//$enable-gradients:            false !default;
-//$enable-transitions:          true !default;
-//$enable-reduced-motion:       true !default;
-//$enable-smooth-scroll:        true !default;
-//$enable-grid-classes:         true !default;
-//$enable-container-classes:    true !default;
-//$enable-cssgrid:              false !default;
-//$enable-button-pointers:      true !default;
-//$enable-rfs:                  true !default;
-//$enable-validation-icons:     true !default;
-//$enable-negative-margins:     false !default;
-//$enable-deprecation-messages: true !default;
+$enable-rounded:              false;
+$enable-validation-icons:     false;
 $enable-important-utilities:  false;
 
+//
 // Color system
+//
 // gray-color-variables
-$white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
-$black:    #000 !default;
+$white:    #fff;
+$gray-100: #f2f2f2;
+$gray-200: #d9d9d9;
+$gray-300: #b3b3b3;
+$gray-400: #a6a6a6;
+$gray-500: #8c8c8c;
+$gray-600: #737373;
+$gray-700: #595959;
+$gray-800: #404040;
+$gray-900: #1a1a1a;
+$black:    #000;
+
 // color-variables
-$blue:    #0d6efd !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #d63384 !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #198754 !default;
-$teal:    #20c997 !default;
-$cyan:    #0dcaf0 !default;
+$blue:    #007bff;
+//$indigo:  #6610f2 !default;
+//$purple:  #6f42c1 !default;
+//$pink:    #d63384 !default;
+//$red:     #dc3545 !default;
+//$orange:  #fd7e14 !default;
+//$yellow:  #ffc107 !default;
+//$green:   #198754 !default;
+//$teal:    #20c997 !default;
+//$cyan:    #0dcaf0 !default;
+
+// The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
+// See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
+$min-contrast-ratio:   3.5;
+
 // theme-color-variables
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-100 !default;
-$dark:          $gray-900 !default;
+$primary:       $blue;
+//$secondary:     $gray-600 !default;
+//$success:       $green !default;
+//$info:          $cyan !default;
+//$warning:       $yellow !default;
+//$danger:        $red !default;
+$light:         $gray-100;
+$dark:          $gray-900;
+
 // body-color-variables
-$body-bg:       $white !default;
-$body-color:    $gray-900 !default;
-// The gradient which is added to components if `$enable-gradients` is `true` (also added to elements with `.bg-gradient`)
-$gradient: linear-gradient(180deg, rgba($white, .15), rgba($white, 0)) !default;
+$body-bg:       $white;
+$body-color:    $gray-900;
+
+//
+// Grid breakpoints
+//
+// Breakpoints
+$grid-breakpoints: (
+    xs: 0,
+    sm: 576px,
+    md: 768px,
+    lg: 992px,
+    xl: 1200px,
+    xxl: 1400px,
+    xxxl: 1700px
+);
+// Container-max-widths
+$container-max-widths: (
+    sm: 540px,
+    md: 720px,
+    lg: 960px,
+    xl: 1140px,
+    xxl: 1320px,
+    xxxl: 1600px
+);
+
+//
+// Components
+//
+$border-color:  $gray-200;
+$box-shadow:    0 .25rem 0.75rem rgba($black, .15);
+$box-shadow-sm: 0 .15rem .35rem rgba($black, .1);
+$box-shadow-lg: 0 0.75rem 1.5rem rgba($black, .175);
+
+$component-active-color: $white;
+$component-active-bg:    $primary;
+
+//
+// Buttons + Forms
+//
+// Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
+$input-btn-focus-width: .1rem;
+// Buttons
+$btn-padding-x: 1rem;
+// Forms
+$form-label-margin-bottom: .25rem;
+$input-border-color:        $gray-200;
+$input-focus-border-color:  rgba($component-active-bg, 20%);
