--- a/resources/scss/cms/_bootstrap.scss
+++ b/resources/scss/cms/_bootstrap.scss
@@ -17,10 +17,10 @@
 @import "~bootstrap/scss/type";
 @import "~bootstrap/scss/containers";
 @import "~bootstrap/scss/grid";
-//@import "~bootstrap/scss/tables";
+@import "~bootstrap/scss/tables";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
-//@import "~bootstrap/scss/transitions";
+@import "~bootstrap/scss/transitions";
 @import "~bootstrap/scss/dropdown";
 //@import "~bootstrap/scss/button-group";
 @import "~bootstrap/scss/nav";
