--- a/resources/scss/cms/_layout.scss
+++ b/resources/scss/cms/_layout.scss
@@ -33,6 +33,8 @@ $cms-breakpoint-sidebar: lg;
     color: $light;
     background-color: $dark;
     border-right: 1px solid $light;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     @include media-breakpoint-down($cms-breakpoint-sidebar) {
         left: -$cms-sidebar-width;
@@ -41,8 +43,8 @@ $cms-breakpoint-sidebar: lg;
 
 .cms-sidebar-header {
     height: $cms-topbar-height;
+    min-height: $cms-topbar-height;
     border-bottom: 1px solid $light;
-    overflow: hidden;
 }
 
 .cms-sidebar-nav {}
@@ -63,7 +65,7 @@ $cms-breakpoint-sidebar: lg;
     }
 }
 
-.cms-nav {
+.cms-navbar {
     position: fixed;
     top: 0;
     right: 0;
@@ -75,8 +77,21 @@ $cms-breakpoint-sidebar: lg;
     background-color: $dark;
     border-bottom: 1px solid $light;
 
+    .navbar-toggler {
+        min-height: 31px;
+        transition: all .15s ease-in-out;
+
+        &:hover {
+            color: rgba($white, .75);
+        }
+    }
+
     @include media-breakpoint-down($cms-breakpoint-sidebar) {
         left: 0;
+
+        .navbar-collapse, .dropdown-menu {
+            text-align: center;
+        }
     }
 }
 
@@ -110,7 +125,7 @@ $cms-breakpoint-sidebar: lg;
         .cms-sidebar {
             left: 0;
         }
-        .cms-nav {
+        .cms-navbar {
             left: $cms-sidebar-width;
         }
     }
