User CMS CRUD part 1

--- a/resources/scss/cms/_layout.scss
+++ b/resources/scss/cms/_layout.scss
@@ -117,6 +117,19 @@ $cms-breakpoint-sidebar: lg;
     padding-bottom: 1rem;
 }
 
+.cms-flash-message {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: $cms-sidebar-width;
+    z-index: $zindex-fixed;
+    transition: $cms-transition-sidebar;
+
+    @include media-breakpoint-down($cms-breakpoint-sidebar) {
+        left: 0;
+    }
+}
+
 // JS States - Sidebar toggle
 
 .js-show-sidebar {
@@ -125,7 +138,7 @@ $cms-breakpoint-sidebar: lg;
         .cms-sidebar {
             left: 0;
         }
-        .cms-navbar {
+        .cms-navbar, .cms-flash-message {
             left: $cms-sidebar-width;
         }
     }
